# ferrite

./: .gitignore  CHANGES_SUMMARY.md  Cargo.toml  PR_REVIEW_GUIDE.md  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
bench/: Cargo.toml  README.md  baseline_metrics.json
bench/benches/: ring_buffer_benches.rs
core/: Cargo.toml
core/benches/: ring_buffer.rs
core/examples/: perf_test.rs
core/src/: lib.rs  ring_buffer.rs
core/src/topic_registry/: mod.rs  topic_registry.rs
core/tests/: edge_cases.rs  loom_tests.rs  property_tests.rs
scripts/: check-regression.sh  perf-counters.sh
