[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
loom = { version = "0.7", features = ["checkpoint"] }
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "ring_buffer"
harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)'] }
